requirements/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: localhost:5000/nginx:v1
        volumeMounts:
        - name: nginx-persistent-storage
          mountPath: /var/www/html
        ports:
        - containerPort: 80
      volumes:
      - name: nginx-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc
