requirements/cAdvisor-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadvisor-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
